# research

./: .gitignore  README.md  adaptive_lora_subtraction_experiments.patch  pyproject.toml  requirements.txt
.github/workflows/: smoke.yml
configs/full/: cifar100_10x10.yaml  cifar100_20x5.yaml  cifar100_pretrain50_cil50.yaml  imagenetr_10x20.yaml
configs/pretrain/: cifar100_base.yaml
configs/quick/: cifar100_debug.yaml
docs/: EXPERIMENTS.md
scripts/: make_subset_imagenetr.py  run_full_cifar100.sh  run_pretrain_cifar100.sh  run_quick.sh  run_self_pretrain_cil.sh
src/ga_lora_sub/: benchmark_methods.py  data.py  drs.py  engine.py  evaluate.py  methods.py  metrics.py  pretrain.py  train_cil.py  utils.py
src/ga_lora_sub/models/: lora.py  timm_backbone.py
tests/: test_lora.py
