[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ga-lora-sub"
version = "0.1.0"
description = "Gradient-aware adaptive LoRA subtraction for rehearsal-free class-incremental learning"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
